# ZadanieMLOPS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  app.py  inference.py  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
api/models/: iris.py  sentiment.py
config/: .env.dev  .env.prod  .env.test
tests/: test_api.py  test_app.py  test_inference.py  test_models.py  test_settings.py
